# quicksectx

./: .appveyor.yml  .gitignore  .travis.yml  .travis.yml.bk  .travis.yml.bk3  .travis_wo_deploy.yml  MANIFEST.in  README.rst  appveyor.yml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_mac_arm64.yml  build_publish.yml  build_test.yml  clean_artifacts.yml  pip_install_unitest.yml  pythonpackage.yml  test_build.yml  test_build_singleos.yml  wheelbuilder.yml
quicksect/: __init__.py  quicksect.pyx
quicksectx/: VERSION  __init__.py  quicksect2.pyx  quicksectx.pxd  quicksectx.pyx  version.py
quicksectx/tests/: Test_quicksect.py  test_quicksect.py
src/: __init__.py  quicksect.pyx  quicksectx.pyx  version.py
src/tests/: Test_quicksect.py  test_quicksect.py  test_quicksectx.py
tests/: Test_quicksect.py  pypy_bugs.txt  skip_quicksect.py  test_quicksect.py  test_quicksectx.py  test_serialization.py
tools/: gitversion.py  template.py
tools/conda.recipe/: meta.yaml
travis/: build-wheels.sh  note_travis_traps.txt  osx_dev_requirements.txt  travis-upload-wheel.sh
