[build-system]
requires = ["setuptools", 'Cython>=0.25,<=3.0.3',"wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quicksectx"
version='0.3.7'
dynamic = ["dependencies","readme"]
authors = [{name = "Jianlin", email="jianlinshi.cn@gmail.com"}]
description = "Quicksect is a fast python / cython implementation of interval search."
keywords=['quicksectx', 'interval search', 'interval tree']
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme={file = ['README.rst']}

[project.urls]
Source = "https://github.com/jianlins/quicksectx"